<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F1923">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/banner_breach" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jaldi_bold"
            android:text="@string/agent_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jaldi_bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/role2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_item_role"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/role_controller" />
            <TextView
                android:id="@+id/tv_item_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/jaldi"
                android:text="@string/role"
                android:layout_marginStart="4dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jaldi_bold"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/biography"/>

        <TextView
            android:id="@+id/tv_item_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jaldi"
            android:text="@string/biography2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:backgroundTint="@color/valText"
            android:layout_marginStart="16dp" />

    </LinearLayout>
</ScrollView>